k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-k8s
spec:
  selector:
    matchLabels:
      app: nestjs-k8s
  replicas: 2
  template:
    metadata:
      labels:
        app: nestjs-k8s
    spec:
      containers:
        - name: nestjs-k8s
          image: h4rasho/zoov2:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
