k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-k8s
spec:
  selector:
    app: nestjs-k8s
  ports:
    - port: 3000
      targetPort: 3000
