k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-k8s
spec:
  selector:
    app: react-k8s
  ports:
    - port: 80
      targetPort: 80
