k8s/ingress-controler.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-k8s
                port:
                  number: 3001
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nestjs-k8s
                port:
                  number: 3000
